--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML-CSS-JS Projects</title>
+    <title>Sanchita ko HTML-CSS-JS Projects</title>
     <!-- font awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -22,7 +22,9 @@
         <div class="nav-wrap">
 
             <div class="heading">
-                <h2>HTML-CSS-JS Projects</h2>
+                <h2>Sanchita ko HTML-CSS-JS Projects</h2>
+                <h2>Sab maile banako ho... aru kai bhetis bhane tyo chor</h2>
+
             </div>
 
             <div class="star-btn">
